--- a/app/views/groups/_groupmenu.html.erb
+++ b/app/views/groups/_groupmenu.html.erb
@@ -4,7 +4,7 @@
       <li class="button"><%= link_to t("edit").html_safe, edit_polymorphic_path([@user, group]) %></li>
       <li class="button"><%= link_to t("delete").html_safe, group, :confirm => t("confirm_delete").html_safe, :method => :delete  %></li>
     <% else %>
-      <li class="button"><%= link_to t("follow"), follow_group_path, :method => :put if not current_user.following?(group) %></li>
+      <li class="button"><%= link_to t("follow").html_safe, follow_group_path, :method => :put if not current_user.following?(group) %></li>
     <% end %>
   </ul>
 <div class="clear" ></div>
