--- a/app/views/meetups/_form.html.erb
+++ b/app/views/meetups/_form.html.erb
@@ -7,22 +7,22 @@
       showErrorTabs();
 
   <% if params[:item] && params[:item][:attachable_id] %>
-      /* preselect pinged resource (item) */
-      id = <%= params[:item][:attachable_id] %>;
-      $('#attachments .field-add').click();
-      $('#attachments select').val(id);
+        /* preselect pinged resource (item) */
+        id = <%= params[:item][:attachable_id] %>;
+        $('#attachments .field-add').click();
+        $('#attachments select').val(id);
   <% end %>
   <% if params[:action] == "new" and !params[:item] %>
-      /* blank memberlist */
-      $("#who .choices-group").find("input ").removeAttr("checked");
+        /* blank memberlist */
+        $("#who .choices-group").find("input ").removeAttr("checked");
   <% elsif params[:action] == "create" and params[:item] %>
-      /* unhide members */
-      $("#who .choices-group").find("div").removeClass("ui-tabs-hide");
+        /* unhide members */
+        $("#who .choices-group").find("div").removeClass("ui-tabs-hide");
   <% end %>
-    /* hide additional location fields */
-    $("#meetup_locations_attributes_1_address_input, #meetup_locations_attributes_1_city_input, #meetup_locations_attributes_1_zip_input, #meetup_locations_attributes_1_country").hide();
-    $("#meetup_locations_attributes_1_country").parent().find("label").hide();
-  });
+      /* hide additional location fields */
+      $("#meetup_locations_attributes_1_address_input, #meetup_locations_attributes_1_city_input, #meetup_locations_attributes_1_zip_input, #meetup_locations_attributes_1_country").hide();
+      $("#meetup_locations_attributes_1_country").parent().find("label").hide();
+    });
   </script>
 <% end %>
 
@@ -62,10 +62,12 @@
       </div>
       <div id="who">
         <div class="button new">
-          <%= link_to t("formtastic.labels.meetup.invite_users"), "#" %>
+          <%# link_to t("formtastic.labels.meetup.invite_users").html_safe, "#" %>
         </div>
         <%= f.inputs do %>
-          <%= f.input :users, :as => :check_boxes, :collection => @meetup.users, :member_label => Proc.new { |u| "#{render :partial => "share/usertiny", :locals => { :user => u }}".html_safe } %>
+          <%= f.input :users, :as => :check_boxes, :collection => @meetup.users, :member_label => Proc.new { |u| "#{render :partial => "share/usertiny_unlinked", :locals => { :user => u }}".html_safe } %>
+          <hr class="divider" />
+          <%= f.input :invited_users, :as => :check_boxes, :collection => @meetup.invited_users, :member_label => Proc.new { |u| "#{render :partial => "share/usertiny_unlinked", :locals => { :user => u }}".html_safe } %>
         <% end %>
       </div>
       <div id="attachments" class="tab_content">
@@ -80,7 +82,7 @@
 
 <% else %>
 
- <%= semantic_form_for @meetup, :method => "get" do |f| %>
+  <%= semantic_form_for @meetup, :method => "get" do |f| %>
 
     <%= render "share/error_messages", :target => @meetup %>
     <div id="tabs">
@@ -114,10 +116,12 @@
       </div>
       <div id="who">
         <div class="button new">
-          <%= link_to t("formtastic.labels.meetup.invite_users"), "#" %>
+          <%# link_to t("formtastic.labels.meetup.invite_users").html_safe, "#" %>
         </div>
         <%= f.inputs do %>
-          <%= f.input :users, :as => :check_boxes, :collection => @meetup.users, :member_label => Proc.new { |u| "#{render :partial => "share/usertiny", :locals => { :user => u }}".html_safe } %>
+          <%= f.input :users, :as => :check_boxes, :collection => @meetup.users, :member_label => Proc.new { |u| "#{render :partial => "share/usertiny_unlinked", :locals => { :user => u }}".html_safe } %>
+          <hr class="divider" />
+          <%= f.input :invited_users, :as => :check_boxes, :collection => @meetup.invited_users, :member_label => Proc.new { |u| "#{render :partial => "share/usertiny_unlinked", :locals => { :user => u }}".html_safe } %>
         <% end %>
       </div>
       <div id="attachments" class="tab_content">
