--- a/app/views/meetups/show.html.erb
+++ b/app/views/meetups/show.html.erb
@@ -33,19 +33,10 @@
   </div>
 <% end %>
 <div class="clear"></div>
-<% if @meetup.users && @meetup.users.count > 0 %>
-  <h2><%= t("meetup.participants", :count => @meetup.users.count) %></h2>
+<% if @meetup.accepted_users && @meetup.accepted_users.count > 0 %>
+  <h2><%= t("meetup.participants", :count => @meetup.accepted_users.count) %></h2>
   <ul class="users-list">
-    <% @meetup.users.each do |user| %>
-      <li class="users-list-item"><%= render :partial => "share/usertiny", :locals => { :user => user } %></li>
-    <% end %>
-  </ul>
-<% end %>
-<div class="clear"></div>
-<% if @meetup.invited_users && @meetup.invited_users.count > 0 %>
-  <h2><%= t("meetup.invited_participants", :count => @meetup.invited_users.count) %></h2>
-  <ul class="users-list">
-    <% @meetup.invited_users.each do |user| %>
+    <% @meetup.accepted_users.each do |user| %>
       <li class="users-list-item"><%= render :partial => "share/usertiny", :locals => { :user => user } %></li>
     <% end %>
   </ul>
