--- a/app/views/users/_activity.html.erb
+++ b/app/views/users/_activity.html.erb
@@ -7,7 +7,7 @@
           <%= case audit.auditable_type.to_s
 
           when "Item"
-            item = Item.find(audit.auditable_id)
+            item = Item.with_deleted.where(:id => audit.auditable_id).first
             case audit.action
             when "create"
               if item.need?
@@ -28,7 +28,7 @@
             end
 
           when "Group"
-            group = Group.find(audit.auditable_id)
+            group = Group.with_deleted.where(:id => audit.auditable_id).first
             case audit.action
             when "create"
               link_to(t("hasCreatedAGroup", :title => group.title).html_safe, group)
@@ -37,7 +37,7 @@
             end
 
           when "Location"
-            location = Location.find(audit.auditable_id)
+            location = Location.with_deleted.where(:id => audit.auditable_id).first
             resource = location.locatable_type.constantize.find(location.locatable_id)
             case audit.action
             when "create"
@@ -47,7 +47,7 @@
             end
 
           when "Ping"
-            ping = Ping.find(audit.auditable_id)
+            ping = Ping.with_deleted.where(:id => audit.auditable_id).first
             resource = ping.pingable_type.constantize.find(ping.pingable_id) # if ping.pingable_type.to_s == "Item"
             case audit.action
             when "create"
@@ -74,7 +74,7 @@
               link_to(t("hasDestroyedAMeetup", :title => meetup.title).html_safe, meetup)
             end
           when "Comment"
-            comment = Comment.find(audit.auditable_id)
+            comment = Comment.with_deleted.where(:id => audit.auditable_id).first
             resource = comment.commentable_type.constantize.find(comment.commentable_id)
             case audit.action
             when "create"
