Added some desc on startpage

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,7 +41,7 @@
     /* Google Analytics */
     
     var _gaq = _gaq || [];
-    _gaq.push(['_setAccount', 'UA-2599953-14']);
+    _gaq.push(['_setAccount', 'UA-32738329-1']);
     _gaq.push(['_trackPageview']);
   
     (function() {
@@ -51,7 +51,7 @@
     })();
   </script>
   
-  <title><%= @title %></title>
+  <title><%= @title | "iwyg - the social go-happy-network"%></title>
 </head>
 <body>
 <div id="container">
