--- a/app/views/page/index.de.html.erb
+++ b/app/views/page/index.de.html.erb
@@ -1,7 +1,9 @@
 <h1><%=h t("title.welcome") %></h1>
 <div class="sub2cols">
   <div class="subcol1">
-    
+    <h2>
+      iwyg- Das soziale "Go Happy"-Netzwerk. Hier kannst Du machen, was Du gerne tust, f&uuml;r Dich und andere.
+    </h2>
   </div>  
   <div class="subcol2">
     <h3><b><%= t("title.login") %></b></h3>
