--- a/app/views/page/index.html.erb
+++ b/app/views/page/index.html.erb
@@ -6,7 +6,9 @@
 <h1><%=h t("title.welcome") %></h1>
 <div class="sub2cols">
   <div class="subcol1">
-    
+    <h2>
+      iwyg - the social "go happy"-network. here here you can do, what you like - for you and others.
+    </h2>
   </div>  
   <div class="subcol2">
     <h3><b><%= t("title.login") %></b></h3>
