set up default title

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,7 +51,7 @@
     })();
   </script>
   
-  <title><%= @title | "iwyg - the social go-happy-network"%></title>
+  <title><%= @title or t("iwyg.title") %></title>
 </head>
 <body>
 <div id="container">
