--- a/app/views/page/index.html.erb
+++ b/app/views/page/index.html.erb
@@ -1,6 +1,6 @@
 <% content_for :head do %>
-  <%= javascript_include_tag 'startpage' %>
-  <%= stylesheet_link_tag 'global/startpage' %>
+  <%# javascript_include_tag 'startpage' %>
+  <%# stylesheet_link_tag 'global/startpage' %>
 <% end %>
 
 <h1><%=h t("title.welcome") %></h1>
