--- a/public/stylesheets/global/items.css
+++ b/public/stylesheets/global/items.css
@@ -4,6 +4,26 @@
  * @author Christian Grlica
  * @copyright 2011 by Heavenseven, www.heavenseven.net 
  */
+
+ /* QR */
+ table.qr {
+  border-width: 0;
+  border-style: none;
+  border-color: #0000ff;
+  border-collapse: collapse;
+}
+table.qr td {
+  border-width: 0;
+  border-style: none;
+  border-color: #0000ff;
+  border-collapse: collapse;
+  padding: 0;
+  margin: 0;
+  width: 10px;
+  height: 10px;
+}
+table.qr td.black { background-color: #000; }
+table.qr td.white { background-color: #fff; }
  
 .item-collection li img {
   padding-right:0.5em;
