--- a/app/views/users/_activity.html.erb
+++ b/app/views/users/_activity.html.erb
@@ -7,7 +7,8 @@
           <%= case audit.auditable_type.to_s
 
           when "Item"
-            item = Item.with_deleted.where(:id => audit.auditable_id).first
+            #item = Item.with_deleted.where(:id => audit.auditable_id).first
+            item = Item.find(audit.auditable_id)
             case audit.action
             when "create"
               if item.need?
@@ -28,7 +29,8 @@
             end
 
           when "Group"
-            group = Group.with_deleted.where(:id => audit.auditable_id).first
+            # group = Group.with_deleted.where(:id => audit.auditable_id).first
+            group = Group.find(audit.auditable_id)
             case audit.action
             when "create"
               link_to(t("hasCreatedAGroup", :title => group.title).html_safe, group)
@@ -47,7 +49,8 @@
             end
 
           when "Ping"
-            ping = Ping.with_deleted.where(:id => audit.auditable_id).first
+            # ping = Ping.with_deleted.where(:id => audit.auditable_id).first
+            ping = Ping.find(audit.auditable_id)
             resource = ping.pingable_type.constantize.find(ping.pingable_id) # if ping.pingable_type.to_s == "Item"
             case audit.action
             when "create"
@@ -74,7 +77,8 @@
               link_to(t("hasDestroyedAMeetup", :title => meetup.title).html_safe, meetup)
             end
           when "Comment"
-            comment = Comment.with_deleted.where(:id => audit.auditable_id).first
+            # comment = Comment.with_deleted.where(:id => audit.auditable_id).first
+            comment = Comment.find(audit.auditable_id)
             resource = comment.commentable_type.constantize.find(comment.commentable_id)
             case audit.action
             when "create"
