--- a/public/stylesheets/global/items.css
+++ b/public/stylesheets/global/items.css
@@ -3,56 +3,45 @@
  * 
  * @author Christian Grlica
  * @copyright 2011 by Heavenseven, www.heavenseven.net 
- */
+*/
 
- /* QR */
- table.qr {
-  border-width: 0;
-  border-style: none;
-  border-color: #0000ff;
-  border-collapse: collapse;
+/* QR */
+#qrcode {
+    width: 128px;
+    float:right;
+    position: relative;
+    top: -170px;
+    right: 60px;
 }
-table.qr td {
-  border-width: 0;
-  border-style: none;
-  border-color: #0000ff;
-  border-collapse: collapse;
-  padding: 0;
-  margin: 0;
-  width: 10px;
-  height: 10px;
-}
-table.qr td.black { background-color: #000; }
-table.qr td.white { background-color: #fff; }
- 
+
 .item-collection li img {
-  padding-right:0.5em;
+    padding-right:0.5em;
 }
 
 .item-owner a {
-  position: relative;
-  left: 65px;
-  top: 2px;
+    position: relative;
+    left: 65px;
+    top: 2px;
 }
 
 .item-bottom {
-  text-align:left;
-  font-size:85%;
+    text-align:left;
+    font-size:85%;
 }
 
 #items-related {
-  
+
 }                   
 #items-related ul {
-  clear:both;
-  width: 100%;
-  height: 120px;
+    clear:both;
+    width: 100%;
+    height: 120px;
 }
-                   
+
 #items-related ul li {
-  width: 25%;
-  float:left;
-  margin-right: 0.5em;
-  border: 1px solid #B8C2B3;
-  background: #D8E0D0;
+    width: 25%;
+    float:left;
+    margin-right: 0.5em;
+    border: 1px solid #B8C2B3;
+    background: #D8E0D0;
 }
