--- a/app/views/page/index.de.html.erb
+++ b/app/views/page/index.de.html.erb
@@ -2,8 +2,14 @@
 <div class="sub2cols">
   <div class="subcol1">
     <h2>
-      iwyg- Das soziale "Go Happy"-Netzwerk. Hier kannst Du machen, was Du gerne tust, f&uuml;r Dich und andere.
+      <b>iwyg</b> - Das soziale "Go Happy"-Netzwerk. Hier kannst Du machen, was Du gerne tust, f&uuml;r Dich und andere.
     </h2>
+    <div class="box ui-corner-all">
+      <cite>Der Geist wird reich durch das, was er empfängt, das Herz durch das, was es gibt.</cite>
+    </div>
+    <div class="right font-smaller">
+      (Victor Hugo)
+    </div>
   </div>  
   <div class="subcol2">
     <h3><b><%= t("title.login") %></b></h3>
