--- a/app/views/page/index.html.erb
+++ b/app/views/page/index.html.erb
@@ -7,8 +7,14 @@
 <div class="sub2cols">
   <div class="subcol1">
     <h2>
-      iwyg - the social "go happy"-network. here here you can do, what you like - for you and others.
+      <b>iwyg</b> - the social "go happy"-network. here here you can do, what you like - for you and others.
     </h2>
+    <div class="box ui-corner-all">
+      <cite>The mind is rich of what he receives, the heart of what it gives.</cite>
+    </div>
+    <div class="right font-smaller">
+      (Victor Hugo)
+    </div>
   </div>  
   <div class="subcol2">
     <h3><b><%= t("title.login") %></b></h3>
