items have slugged urls now

--- a/public/stylesheets/global/items.css
+++ b/public/stylesheets/global/items.css
@@ -5,6 +5,12 @@
  * @copyright 2011 by Heavenseven, www.heavenseven.net 
 */
 
+/* LOCATION */
+
+.location {
+    height: 200px;
+}
+
 /* QR */
 #qrcode {
     width: 128px;
