--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -62,10 +62,13 @@
 </div>
 <div id="col2">
   <div class="box ui-corner-all">
-    <% if logged_in? and ( @location && !@locations_json.blank? ) %>
-      <%= render :partial => "locations/location", :locals => {:location => @location} %>
-      <%= render :partial => "share/map", :locals => { :locations => @locations_json } %>
-    <% end %>
+    <div class="location">
+      <% if logged_in? and ( @location && !@locations_json.blank? ) %>
+        <%= render :partial => "locations/location", :locals => {:location => @location} %>
+
+        <%= render :partial => "share/map", :locals => { :locations => @locations_json } %>
+      <% end %>
+    </div>
     <div id="qrcode">
     </div>
   </div>
