--- a/app/views/layouts/mailbox.rhtml
+++ b/app/views/layouts/mailbox.rhtml
@@ -1,6 +1,6 @@
 <h2><%=h t("title.mailbox" )%></h2>
 <div class="button new">
-  <%= link_to t("mailbox.newMessage"), new_sent_path %>
+  <%# link_to t("mailbox.newMessage"), new_sent_path %>
 </div>
 <div id="mailbox" class="sub2cols ui-corner-all">
   <div id="usermailbox" class="subcol1">
